# agent-skills

./: .gitignore  AGENTS.md  CLEANUP_SUMMARY.md  DISCOVERY-SYSTEM.md  DOCUMENTATION-GUIDE.md  DOCUMENTATION-SUMMARY.md  LICENSE  README.md  SESSION-SUMMARY.md  sync-from-claude.sh
agents/: README.md  terraform-troubleshooter.agent.md
agents/copilot-builtin/: explore.agent.yaml
agents/springfield/: bart.md  lisa.md  lovejoy.md  marge.md  ralph.md
agents/terraform-building-block/: README.md  developer-agent.md  documentation-agent.md  platform-architect.md  release-agent.md  review-agent.md  solutions-architect.md  triage-agent.md
docs/: README.md
docs/how-to/: README.md  (+6 more)
skills/: brainstorming  copilot-cli  dispatching-parallel-agents  executing-plans  finishing-a-development-branch  receiving-code-review  requesting-code-review  skill-creator  subagent-driven-development  superpowers  systematic-debugging  test-driven-development  using-git-worktrees  using-superpowers  verification-before-completion  writing-plans  writing-skills
skills/outlook-headless/scripts/: pyproject.toml
skills/outlook-headless/scripts/src/: cli.py  inspect_deleted.py  inspect_header_dom.py  models.py  outlook_client.py  parser.py  scanner.py  setup_auth.py
skills/outlook-headless/scripts/tests/: test_models.py  test_parser.py  test_thread_extraction.py
skills/outlook-headless/scripts/tests/snapshots/: deleted_items_list.txt  full_document.txt  item_0.txt  item_1.txt  item_2.txt  item_3.txt  item_4.txt
tools/: _skill-config-preamble.sh  skill-config.sh  skill-drift.sh  skills
(+223 files in other folders)
